- move strings to strings resource - update layout for better font display

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">bitcoinPriceIndex</string>
     <string name="click_to_load">click to load</string>
     <string name="load">Load</string>
+    <string name="load_data">Loading Bitcoin data</string>
+    <string name="tap_msg">Tap icon to load data</string>
 </resources>
