--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,6 @@
     <string name="load">Load</string>
     <string name="load_data">Loading Bitcoin data</string>
     <string name="tap_msg">Tap icon to load data</string>
+    <string name="regular_text_view">Developed By %s</string>
+
 </resources>
